# FINCH-Firmware

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  FIRMWARE.ioc  LICENSE  Makefile  README.md  arm-none-eabi-gcc.cmake
.metadata/: .log4j.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: STM32G474RETX.language.settings.xml  STM32H743ZITX.1642560190706.pdom  STM32H743ZITX.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
Core/Inc/: main.h  stm32g4xx_hal_conf.h
Core/Src/: main.c  system_stm32g4xx.c
Drivers/Common/System/: it.c  it.h  stm32g4xx.c  sysmem.c
Drivers/STM32G4/System/: stm32g4xx_hal_conf.h
Drivers/STM32H7/System/: stm32h7xx_hal_conf.h
Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_dcmi.h  stm32h7xx_hal_sdram.h
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_dcmi.c  stm32h7xx_hal_dma_ex.c  stm32h7xx_hal_sdram.c
Generated_Drivers/CMSIS/Include/: cmsis_compiler.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h
Generated_Drivers/STM32G4xx_HAL_Driver/Inc/: stm32g4xx_hal_cortex.h  stm32g4xx_hal_def.h  stm32g4xx_hal_dma.h  stm32g4xx_hal_dma_ex.h  stm32g4xx_hal_exti.h  stm32g4xx_hal_flash.h  stm32g4xx_hal_flash_ex.h  stm32g4xx_hal_flash_ramfunc.h  stm32g4xx_hal_gpio.h  stm32g4xx_hal_gpio_ex.h  stm32g4xx_hal_pwr.h  stm32g4xx_hal_pwr_ex.h  stm32g4xx_hal_rcc.h  stm32g4xx_hal_rcc_ex.h  stm32g4xx_hal_tim.h  stm32g4xx_hal_tim_ex.h  stm32g4xx_hal_uart.h  stm32g4xx_hal_uart_ex.h  stm32g4xx_ll_pwr.h
Generated_Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal.c  stm32g4xx_hal_cortex.c  stm32g4xx_hal_dma.c  stm32g4xx_hal_dma_ex.c  stm32g4xx_hal_exti.c  stm32g4xx_hal_flash.c  stm32g4xx_hal_flash_ex.c  stm32g4xx_hal_flash_ramfunc.c  stm32g4xx_hal_gpio.c  stm32g4xx_hal_pwr.c  stm32g4xx_hal_pwr_ex.c  stm32g4xx_hal_rcc.c  stm32g4xx_hal_rcc_ex.c  stm32g4xx_hal_tim.c  stm32g4xx_hal_tim_ex.c  stm32g4xx_hal_uart.c  stm32g4xx_hal_uart_ex.c
Manual_Tests/STM32_nvic/: nvic_test.c
Manual_Tests/STM32_tim/: tim_test.c
Manual_Tests/STM32_uart_rx/: uart_rx_test.c
Manual_Tests/STM32_uart_tx/: uart_tx_test.c
Manual_Tests/common/stm32/gpio/: GPIOTest.c  gpio_test.c
Manual_Tests/common/stm32/mcu_errors/: MCUErrorsTest.c  mcu_errors_test.c
Manual_Tests/common/stm32/mcu_info/: MCUInfoTest.c  mcu_info_test.c
Manual_Tests/common/stm32/random/: RandomTest.c  random_test.c
Manual_Tests/common/stm32/timer/: TimerTest.c
Manual_Tests/common/stm32/uart_rx/: UARTRXTest.c  uart_rx_test.c
Manual_Tests/common/stm32/uart_tx/: UARTTXTest.c  uart_tx_test.c
Manual_Tests/common/stm32/util/: UtilTest.c  util_test.c
Manual_Tests/nucleo_g474re/g474re/: G474RETest.c  g474re_test.c
Manual_Tests/nucleo_h743zi2/gpio_interrupt/: gpio_interrupt_test.c
Manual_Tests/nucleo_h743zi2/gpio_it_input/: GPIOITInputTest.c  gpio_it_input_test.c
Manual_Tests/nucleo_h743zi2/h743zi2/: h743zi2_test.c
Prog_files/STM32G4/: Firmware.ioc
Prog_files/STM32H7/: Firmware.ioc
Projects/STM32G431RBTX/: .cproject  .project  STM32G431RBTX.ioc
Projects/STM32G474RETX/: .cproject  .project  STM32G474RETX.ioc
Projects/STM32H743ZITX/: .cproject  .project  STM32H743ZITX.ioc
Src/common/stm32/gpio/: GPIO.h  GPIOAltFunc.c  GPIOAltFunc.h  GPIOITInput.c  GPIOITInput.h  GPIOInput.c  GPIOInput.h  GPIOOutput.c  GPIOOutput.h  gpio.c  gpio.h  gpio_alt_func.c  gpio_alt_func.h  gpio_input.c  gpio_input.h  gpio_interrupt.c  gpio_interrupt.h  gpio_it_input.c  gpio_it_input.h  gpio_output.c  gpio_output.h
Src/common/stm32/i2c/: I2C.h  I2CBus.c  I2CBus.h  I2CDevice.c  I2CDevice.h  I2CRead.c  I2CRead.h  I2CWrite.c  I2CWrite.h
Src/common/stm32/mcu/: Errors.c  Errors.h  HAL.h  Init.c  Init.h  InitSTM32G431.c  InitSTM32G474.c  InitSTM32H743.c  MCU.c  MCU.h  errors.c  errors.h  hal.h  init.c  init.h  init_stm32g474.c  init_stm32h743.c  interrupts.c  interrupts.h  it.c  mcu.c  mcu.h  startup.c  startup.h  stm32h7_startup.h  stm32h7xx_it.c  syscalls.c  sysmem.c
Src/common/stm32/spi/: SPI.h  SPIBus.c  SPIBus.h  SPIDevice.c  SPIDevice.h  SPITransfer.c  SPITransfer.h
Src/common/stm32/timer/: Timer.c  Timer.h
Src/common/stm32/uart/: Log.c  Log.h  (+8 more)
Src/drivers/STM32H7_clock/: clock.h
Src/drivers/STM32_fmc_sdram/: fmc_sdram.c  fmc_sdram.h
Src/drivers/STM32_gpio/: gpio.h
Src/drivers/STM32_nvic/: nvic.c  nvic.h
Src/drivers/STM32_tim/: tim.c  tim.h  tim_it_handlers.c
Src/drivers/STM32_uart/: common.h  log.c  log.h  uart.c  uart.h
Src/drivers/STM32_usart/: usart.c  usart.h
Src/nucleo_g431rb/: G431RB.c  G431RB.h  G431RBConfig.h
Src/nucleo_g474re/: G474RE.c  G474RE.h  G474REConfig.h  g474re.c  g474re.h  g474re_config.h  nucleo_g474re.c  nucleo_g474re.h
Src/nucleo_h743zi2/: H743ZI2.c  H743ZI2.h  H743ZI2Config.h  h743zi2.c  h743zi2.h  h743zi2_config.h  nucleo_h743zi2.c  nucleo_h743zi2.h
Startup/STM32G4/: stm32g4_startup.c  stm32g4_startup.h  stm32g4xx_hal_conf.h  stm32g4xx_it.c  system_stm32g4xx.c
Startup/STM32H7/: stm32h7_startup.c  stm32h7xx_hal_conf.h  stm32h7xx_it.h  syscalls.c
System/STM32G4/: system_stm32g4xx.c
System/STM32H7/: stm32h7xx_hal_conf.h
manual_tests/STM32G4_gpio/: gpio_test.c  gpio_test.h
manual_tests/STM32G4_tim/: tim_test.c
manual_tests/STM32_gpio/: gpio_test.c  gpio_test.h
manual_tests/STM32_tim/: main.c  tim_test.c
src/drivers/STM32G4_clock/: clock.c  clock.h
src/drivers/STM32G4_gpio/: gpio.c  gpio.h
src/drivers/STM32G4_tim/: tim.c  tim.h
src/drivers/STM32H7_clock/: clock.c  clock.h
src/drivers/STM32_gpio/: gpio.c  gpio.h
src/drivers/STM32_tim/: tim.c  tim.h
tests/: autotester.py
(+25 files in other folders)
